--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                 </tr>
                                 <tr>
                                     <td align="right" width="50%"><strong>Instagram :</strong></td>
-                                    <td align="left" width="50%">sam_uncleee</td>
+                                    <td align="left" width="50%">sam__ani</td>
                                 </tr>
                             </tbody>
                         </table>
