--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <div class="col-lg-15 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Situs</h4>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/samani21" target="_blank"><i class="fab fa-fw fa-github"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.instagram.com/sam_uncleee/" target="_blank"><i class="fab fa-fw fa-instagram"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.instagram.com/sam__ani/" target="_blank"><i class="fab fa-fw fa-instagram"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/sam-ani-633b48210/" target="_blank"><i class="fab fa-fw fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com" target="_blank"><i class="fab fa-fw fa-twitter"></i></a>
                     </div>
