--- a/index.html
+++ b/index.html
@@ -254,9 +254,9 @@
                                     <div>
                                         <p>
                                             <h4 align="left">
-                                                Saya berumur 21 tahun, saya masih kuliah Di  Universitas Islam Kalimantan Muhammad Arsyad 
-                                                Al-Banjari Banjarmasin, Fakultas Teknologi Informasi Studi Teknik Informatika. Saya belajar
-                                                pemrograman WEB sudah hampir 1 tahun. Sekarang saya lagi fokus mendalami prmrograman WEB
+                                                Saya berumur <span id="result" class="text-primary"></span> tahun, seorang lulusan Serjana Kompuer di Unniversitas Islam Kalimantan Muhammad Arsyad Al Banjari, mempunyai pengalaman magang dalam
+                                                bidang administrasi. Memiliki pemahaman dalam penginputan data dan dokumen ke dalam digitalisasi. Mampu bekerja secara mandidi maupun dalam tim untuk mencapai tujuan yang ditetapkan. Saya siap membawa pengalaman
+                                                 serta keahlian teknis dan interpersonal yang saya miliki untuk memberikan kontribusi terbaik.
                                             </h4>
                                         </p>
                                     </div>
@@ -311,7 +311,7 @@
                                                         <td>SMAN 9 Banjarmasin</td>
                                                     </tr>
                                                     <tr>
-                                                        <td><i class="fas fa-graduation-cap"></i> 2019 - Sekarang</td>
+                                                        <td><i class="fas fa-graduation-cap"></i> 2019 - 2023</td>
                                                         <td>Universitas Islam Kalimantan Muhammad Arsyad Al-Banjari Banjarmasin</td>
                                                     </tr>
                                                 </tbody>
@@ -369,6 +369,15 @@
                                             <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="80%" aria-valuemin="0" aria-valuemax="100" style="width: 80%">80%</div>
                                         </div>
                                         <hr>
+                                        <h4>Laravel :</h4>
+                                        <div class="progress" style="height: 30px">
+                                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="50%" aria-valuemin="0" aria-valuemax="100" style="width: 50%">80%</div>
+                                        </div>
+                                        <hr>
+                                        <h4>Ci :</h4>
+                                        <div class="progress" style="height: 30px">
+                                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="20%" aria-valuemin="0" aria-valuemax="100" style="width: 20%">80%</div>
+                                        </div>
                                     </div>
                                     <br>
                                     <!-- Tombol menutup jendela kemampuan -->
@@ -385,5 +394,27 @@
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+        <script>
+            var date = "06/21/1999";
+            
+            if(date === ""){
+                alert("Please complete the required field!");
+            }else{
+                var today = new Date();
+                var birthday = new Date(date);
+                var year = 0;
+                if (today.getMonth() < birthday.getMonth()) {
+                    year = 1;
+                } else if ((today.getMonth() == birthday.getMonth()) && today.getDate() < birthday.getDate()) {
+                    year = 1;
+                }
+                var age = today.getFullYear() - birthday.getFullYear() - year;
+         
+                if(age < 0){
+                    age = 0;
+                }
+                document.getElementById('result').innerHTML = age;
+            }
+           </script>
     </body>
 </html>
