--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Bidang-->
-                <p class="masthead-subheading font-weight-light mb-0">Web Designer</p>
+                <p class="masthead-subheading font-weight-light mb-0">Web Developer</p>
             </div>
         </header>
         <!--Section untuk portofolio -->
@@ -371,12 +371,12 @@
                                         <hr>
                                         <h4>Laravel :</h4>
                                         <div class="progress" style="height: 30px">
-                                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="50%" aria-valuemin="0" aria-valuemax="100" style="width: 50%">80%</div>
+                                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="30%" aria-valuemin="0" aria-valuemax="100" style="width: 30%">30%</div>
                                         </div>
                                         <hr>
                                         <h4>Ci :</h4>
                                         <div class="progress" style="height: 30px">
-                                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="20%" aria-valuemin="0" aria-valuemax="100" style="width: 20%">80%</div>
+                                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="20%" aria-valuemin="0" aria-valuemax="100" style="width: 20%">20%</div>
                                         </div>
                                     </div>
                                     <br>
